# learn_rust

./: .gitignore  README.md
docs/: rust_rocket.md
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
rustlang-rocket-mongodb/: Cargo.toml
rustlang-rocket-mongodb/src/: lib.rs  main.rs
rustlang-rocket-mongodb/src/cats/: mod.rs  repository.rs
rustweb/: Cargo.toml  Rocket.toml
rustweb/src/: lib.rs
rustweb/src/db/: connection.rs  models.rs  query.rs  schema.rs
rustweb/src/routes/: notice.rs
variables/src/: main.rs
