[package]
name = "rustweb"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.7", features = ["mysql"] }

dotenv = "0.15.0"
r2d2 = "*"
r2d2-diesel = "*"